first screen init

--- a/index.html
+++ b/index.html
@@ -58,9 +58,26 @@
                         </div>
                     </header>
                     <div class="hero__container">
-                        
+                        <div class="hero__content">
+                            <div class="hero__left">
+                                <img src="dist/assets/img/content/burger.png" alt="big burger photo" class="hero__img">
+                            </div>
+                            <div class="hero__right">
+                                <p class="section__title">
+                                    Мы делаем
+                                </p>
+                                <p class="hero__desc">Натуральные бургеры</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
+                <a class="down-arrow" href="#">
+                    <span class="down-arrow__icon-wrapper">
+                            <svg class="down-arrow__icon">
+                              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="/dist/assets/img/sprite.svg#arrow-scroll"></use>
+                            </svg>
+                          </span>
+                </a>
             </section>
             <section class="section best">
                 <div class="container">
