second section icons

--- a/index.html
+++ b/index.html
@@ -79,14 +79,51 @@
                 <a class="down-arrow" href="#">
                     <span class="down-arrow__icon-wrapper">
                             <svg class="down-arrow__icon">
-                              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="/dist/assets/img/sprite.svg#arrow-scroll"></use>
+                              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="/dist/assets/img/icons/sprite.svg#arrow-scroll"></use>
                             </svg>
                           </span>
                 </a>
             </section>
             <section class="section best">
                 <div class="container">
-                    
+                    <p class="section__title title__we">
+                        Мы лучшие
+                    </p>
+                    <ul class="best__list">
+                        <li class="best__item">
+                            <svg class="best__icon-image" fill="#e25028">
+                                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="/dist/assets/img/icons/sprite.svg#meat"></use>
+                            </svg>
+                            <p class="best__title">
+                                100% свежее мясо
+                            </p>
+                            <p class="best__text">
+                                Драма представляет собой деструктивный цикл. Анапест представляет собой анапест. Ямб неравномерен.
+                            </p>
+                        </li>
+                        <li class="best__item">
+                            <svg class="best__icon-image" fill="#f8b43a">
+                                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="/dist/assets/img/icons/sprite.svg#hand"></use>
+                            </svg>
+                            <p class="best__title">
+                                Ручная сборка
+                            </p>
+                            <p class="best__text">
+                                Драма представляет собой деструктивный цикл. Анапест представляет собой анапест. Ямб неравномерен.
+                            </p>
+                        </li>
+                        <li class="best__item">
+                            <svg class="best__icon-image" fill="#8ac03e">
+                                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="/dist/assets/img/icons/sprite.svg#natural"></use>
+                            </svg>
+                            <p class="best__title">
+                                Натуральные ингредиенты
+                            </p>
+                            <p class="best__text">
+                                Драма представляет собой деструктивный цикл. Анапест представляет собой анапест. Ямб неравномерен.
+                            </p>
+                        </li>
+                    </ul>
                 </div>
             </section>
             <section class="section burgers">
