--- a/index.html
+++ b/index.html
@@ -523,31 +523,31 @@
         										</label>
                                 <label class="order__form-block">
         											<div class="order__form-label">Телефон</div>
-        											<input class="order__form-input phone-mask"  name="phone" type="text" placeholder="">
+        											<input class="order__form-input phone-mask" required="" data-parsley-trigger="change"  name="phone" type="text" placeholder="">
         										</label>
                             </div>
                             <div class="order__form-row">
                                 <label class="order__form-block">
         											<div class="order__form-label">Улица</div>
-        											<input class="order__form-input" name="street" type="text" placeholder="">
+        											<input class="order__form-input" required="" data-parsley-trigger="change" name="street" type="text" placeholder="">
         										</label>
                             </div>
                             <div class="order__form-row order__form-row_quatro">
                                 <label class="order__form-block">
         											<div class="order__form-label">Дом</div>
-        											<input class="order__form-input" name="home" type="text" placeholder="">
+        											<input class="order__form-input" required="" data-parsley-trigger="change" name="home" type="text" placeholder="">
         										</label>
                                 <label class="order__form-block">
         											<div class="order__form-label">Корпус</div>
-        											<input class="order__form-input" name="part" type="text" placeholder="">
+        											<input class="order__form-input" required="" data-parsley-trigger="change" name="part" type="text" placeholder="">
         										</label>
                                 <label class="order__form-block">
         											<div class="order__form-label">Квартира</div>
-        											<input class="order__form-input" name="appt" type="text" placeholder="">
+        											<input class="order__form-input" required="" data-parsley-trigger="change" name="appt" type="text" placeholder="">
         										</label>
                                 <label class="order__form-block">
         											<div class="order__form-label">Этаж</div>
-        											<input class="order__form-input" name="floor" type="text" placeholder="">
+        											<input class="order__form-input" required="" data-parsley-trigger="change" name="floor" type="text" placeholder="">
         										</label>
                             </div>
                         </div>
@@ -555,7 +555,7 @@
                             <div class="order__form-row">
                                 <label class="order__form-block">
         											<div class="order__form-label">Комментарий</div>
-        											<textarea class="order__form-input order__form-input_textarea" name="comment"></textarea>
+        											<textarea class="order__form-input order__form-input_textarea" required="" data-parsley-trigger="change" name="comment"></textarea>
         										</label>
                             </div>
                             <div class="order__form-row">
